// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapSubmit onChange form with mapSubmit 1`] = `
{
  "errorsInline": {},
  "fieldsInline": {
    "profile.firstName": {
      "_type": "fieldMeta",
      "active": false,
      "blurred": false,
      "blurredAfterOuterError": false,
      "changed": false,
      "changedAfterOuterError": false,
      "touched": false,
      "touchedAfterOuterError": false,
      "validate": undefined,
    },
    "username": {
      "_type": "fieldMeta",
      "active": false,
      "blurred": false,
      "blurredAfterOuterError": false,
      "changed": true,
      "changedAfterOuterError": false,
      "touched": false,
      "touchedAfterOuterError": false,
      "validate": undefined,
    },
  },
  "form": {
    "hasError": false,
    "hasOuterError": false,
    "submitted": false,
  },
  "meta": {},
  "outerErrorsInline": {},
  "values": {
    "info": {
      "username": "test username",
    },
    "profile": {
      "firstName": "test first name",
    },
  },
}
`;

exports[`MapSubmit onChange form without mapSubmit 1`] = `
{
  "errorsInline": {},
  "fieldsInline": {
    "profile.firstName": {
      "_type": "fieldMeta",
      "active": false,
      "blurred": false,
      "blurredAfterOuterError": false,
      "changed": false,
      "changedAfterOuterError": false,
      "touched": false,
      "touchedAfterOuterError": false,
      "validate": undefined,
    },
    "username": {
      "_type": "fieldMeta",
      "active": false,
      "blurred": false,
      "blurredAfterOuterError": false,
      "changed": true,
      "changedAfterOuterError": false,
      "touched": false,
      "touchedAfterOuterError": false,
      "validate": undefined,
    },
  },
  "form": {
    "hasError": false,
    "hasOuterError": false,
    "submitted": false,
  },
  "meta": {},
  "outerErrorsInline": {},
  "values": {
    "profile": {
      "firstName": "test first name",
    },
    "username": "test username",
  },
}
`;

exports[`MapSubmit onSubmit form with mapSubmit 1`] = `
{
  "errorsInline": {},
  "fieldsInline": {
    "profile.firstName": {
      "_type": "fieldMeta",
      "active": false,
      "blurred": false,
      "blurredAfterOuterError": false,
      "changed": true,
      "changedAfterOuterError": false,
      "touched": false,
      "touchedAfterOuterError": false,
      "validate": undefined,
    },
    "username": {
      "_type": "fieldMeta",
      "active": false,
      "blurred": false,
      "blurredAfterOuterError": false,
      "changed": true,
      "changedAfterOuterError": false,
      "touched": false,
      "touchedAfterOuterError": false,
      "validate": undefined,
    },
  },
  "form": {
    "hasError": false,
    "hasOuterError": false,
    "submitted": true,
  },
  "meta": {},
  "outerErrorsInline": {},
  "values": {
    "info": {
      "username": "test username",
    },
    "profile": {
      "firstName": "test first name",
    },
  },
}
`;

exports[`MapSubmit onSubmit form without mapSubmit 1`] = `
{
  "errorsInline": {},
  "fieldsInline": {
    "profile.firstName": {
      "_type": "fieldMeta",
      "active": false,
      "blurred": false,
      "blurredAfterOuterError": false,
      "changed": true,
      "changedAfterOuterError": false,
      "touched": false,
      "touchedAfterOuterError": false,
      "validate": undefined,
    },
    "username": {
      "_type": "fieldMeta",
      "active": false,
      "blurred": false,
      "blurredAfterOuterError": false,
      "changed": true,
      "changedAfterOuterError": false,
      "touched": false,
      "touchedAfterOuterError": false,
      "validate": undefined,
    },
  },
  "form": {
    "hasError": false,
    "hasOuterError": false,
    "submitted": true,
  },
  "meta": {},
  "outerErrorsInline": {},
  "values": {
    "profile": {
      "firstName": "test first name",
    },
    "username": "test username",
  },
}
`;
